@@ -1,3 +1,10 @@
+2008-07-28  Matthias Clasen  <mclasen@redhat.com>
+
+	* configure.ac: Bump GLib requirement to 2.17.5 (for GEmblemedIcon)
+	* gproxyvolumemonitor.c: Handle GEmblemedIcon in deserialization code.
+	* gvfsproxyvolumemonitordaemon.c: Handle GEmblemedIcon in 
+	serialization code.
+
 2008-07-23  Hans Petter Jansson  <hpj@novell.com>
 
 	* configure.ac: Post-release bump to 0.99.4.
